--- a/nlp_strategy/nlp_strategy.rmd
+++ b/nlp_strategy/nlp_strategy.rmd
@@ -18,7 +18,7 @@ Our work is based on the frameworks proposed by Kornberger & Vaara (2022) on str
 
 They stress the importance of drawing methodological-analytic lessons from military strategy literature in order to have *strategy* clearly defined (Ibid.; 8). In this sense, it is conceived here as a \`bridge between two shores´: *policy* (as big guiding principles, purposes, or *Grand Strategy*) and *tactics* (as a means, power, or material prowess) (Ibid; 2, Ibid. on Clausewitz, Gray and Admiral Wylie; 4). According to our authors, *strategy* is not something to be implemented, but a "living movement" among these two "sides" and its function is to translate \`purposes into conducts on a battlefield and vice versa´ (Ibid. on Clausewitz; 8). *Strategy* ultimately refers to an *effect* (that the two "ends" of the bridge have on one another on a constant flux) and not a concrete action or model (Ibid.; 9). Hence, it has constant change, adaptation, and evolution as salient features in order to achieve *victory* (effectively exercising power) in the long term through *policy* and never through \`operational issues of warfare´ solely (Ibid; 4, 6). Kornberger & Vaara´s work gains importance in the current context of hybrid wars, emergent AI markets, ambitious and transition-based climate change policies, among others. Continuing with the authors´ avowal, we consider useful to address core principles on *strategy* (Ibid; 10) from popular military strategy literature to navigate uncertain scenarios (as traversed by the \`fog of war´) practically (to have awareness of a given situation and to train *good judgment* that might enlighten action) (Ibid. on Clausewitz; 3, 10).
 
-### 1. Downloading and loading basic packages
+### 1. Downloading & loading basic packages
 
 ```{r message=FALSE, warning=FALSE}
 library(stringr)
